[package]
name = "multipos_rustpy"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "multipos_rustpy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.29.0"
multiposrust = {git = "https://github.com/msujas/multipos_rust"}